# cyrano-flow

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  tests.yml
src/cyrano/: __init__.py  app.py  cli.py  io.py
src/cyrano/cli/: analyze.py  compare.py  explore.py  main.py
src/cyrano/gui/: analyze.py  app.py  compare.py  explore.py
src/cyrano/services/: __init__.py  analyze_plate.py  summarize_fcs.py
tests/: conftest.py  test_analyze_plate.py  test_cli.py  test_io.py  test_smoke.py  test_summarize_fcs.py
